...
    },
    "courses.title" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Your courses"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "履修コース"
...
    },
    "login.again" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign in again"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "再ログイン"
...
    },
    "notifications" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notifications"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "通知"
...
            "state" : "translated",
            "value" : "予定"
          }
        }
      }
    },
    "tab.courses" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Courses"
          }
...
            "state" : "translated",
            "value" : "コース"
          }
        }
      }
    },
    "tab.home" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
          }
...
            "state" : "translated",
            "value" : "ホーム"
          }
        }
      }
    },
    "tab.messages" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Messages"
          }
...
